--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,77 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	 font-family: 'Rooto', 'Sans Serif';
+	 font-size: 16px;
+	 padding: 0;
+	 margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+header{
+	background-color: #03A9F4;
+	padding:14px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+h1, h2{
+	font-weight: 300;
+}
+
+header>h1{
+	font-weight: 300;
+	font-size: 24px;
+	margin: 0;
+	color: #FFFFFF;
+}
+
+h2{
+	font-size: 24px;
+	margin: 24px 0;
+}
+
+h2> .currency{
+	color: 
+}
+
+.principal{
+	color: #0288D1;
+}
+
+.interest{
+	color: #EF6C00;
+}
+
+input[type=text]{
+	-webkit-appearance: none;
+	width: 150px;
+	height: 24px;
+	padding: 3px 8px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+	-webkit-box-shadow:none;
+	box-shadow: none;
+}
+
+label{
+	display: inline-block;
+	width: 80px;
+	text-align: right;
+	margin-right: 4px;
+}
+
+.content{
+	padding: 20px;
+}
+
+.currency:before{
+	content:"$";
+}
+
+.left{
+	text-align: left;
+}
+
+.form> div{
+	margin: 6px 0;
 }
